--- a/hymns/manifest.json
+++ b/hymns/manifest.json
@@ -1,4 +1,7 @@
 {
     "files": [
+      { "name": "hymns/1.txt", "timestamp": 1742173548 },
+      { "name": "hymns/2.txt", "timestamp": 1742173548 }
     ]
   }
+  
