--- a/hymns/manifest.json
+++ b/hymns/manifest.json
@@ -1,5 +1,13 @@
 {
     "files": [
+      { "name": "hymns/131.txt", "timestamp": 1746509588 },
+      { "name": "hymns/133.txt", "timestamp": 1746509588 },
+      { "name": "hymns/2.txt", "timestamp": 1746509588 },
+      { "name": "hymns/206.txt", "timestamp": 1746509588 },
+      { "name": "hymns/215.txt", "timestamp": 1746509588 },
+      { "name": "hymns/30.txt", "timestamp": 1746509588 },
+      { "name": "hymns/52.txt", "timestamp": 1746509588 },
+      { "name": "hymns/7.txt", "timestamp": 1746509588 }
     ]
   }
   
