--- a/hymns/manifest.json
+++ b/hymns/manifest.json
@@ -8,7 +8,8 @@
       { "name": "hymns/30.txt", "timestamp": 1746509588 },
       { "name": "hymns/52.txt", "timestamp": 1746509588 },
       { "name": "hymns/7.txt", "timestamp": 1746509588 },
-      { "name": "hymns/28.txt", "timestamp": 1754586835 }
+      { "name": "hymns/28.txt", "timestamp": 1754586835 },
+      { "name": "hymns/53.txt", "timestamp": 1754684990 }
     ]
   }
   
