Correcting lyrics of hymn 208

--- a/hymns/manifest.json
+++ b/hymns/manifest.json
@@ -9,7 +9,8 @@
       { "name": "hymns/52.txt", "timestamp": 1746509588 },
       { "name": "hymns/7.txt", "timestamp": 1746509588 },
       { "name": "hymns/28.txt", "timestamp": 1754586835 },
-      { "name": "hymns/53.txt", "timestamp": 1754684990 }
+      { "name": "hymns/53.txt", "timestamp": 1754684990 },
+      { "name": "hymns/208.txt", "timestamp": 1757298852 }
     ]
   }
   
