--- a/hymns/manifest.json
+++ b/hymns/manifest.json
@@ -10,7 +10,9 @@
       { "name": "hymns/7.txt", "timestamp": 1746509588 },
       { "name": "hymns/28.txt", "timestamp": 1754586835 },
       { "name": "hymns/53.txt", "timestamp": 1754684990 },
-      { "name": "hymns/208.txt", "timestamp": 1757298852 }
+      { "name": "hymns/208.txt", "timestamp": 1757298852 },
+      { "name": "hymns/10.txt", "timestamp": 1757638029 },
+      { "name": "hymns/9.txt", "timestamp": 1757638121 }
     ]
   }
   
