updating hymn lyrics

--- a/hymns/manifest.json
+++ b/hymns/manifest.json
@@ -1,18 +1,188 @@
 {
-    "files": [
-      { "name": "hymns/131.txt", "timestamp": 1746509588 },
-      { "name": "hymns/133.txt", "timestamp": 1746509588 },
-      { "name": "hymns/2.txt", "timestamp": 1746509588 },
-      { "name": "hymns/206.txt", "timestamp": 1746509588 },
-      { "name": "hymns/215.txt", "timestamp": 1746509588 },
-      { "name": "hymns/30.txt", "timestamp": 1746509588 },
-      { "name": "hymns/52.txt", "timestamp": 1746509588 },
-      { "name": "hymns/7.txt", "timestamp": 1746509588 },
-      { "name": "hymns/28.txt", "timestamp": 1754586835 },
-      { "name": "hymns/53.txt", "timestamp": 1754684990 },
-      { "name": "hymns/208.txt", "timestamp": 1757298852 },
-      { "name": "hymns/10.txt", "timestamp": 1757638029 },
-      { "name": "hymns/9.txt", "timestamp": 1757638121 }
-    ]
-  }
-  
+  "files": [
+    {
+      "name": "hymns/131.txt",
+      "timestamp": 1746509588
+    },
+    {
+      "name": "hymns/206.txt",
+      "timestamp": 1746509588
+    },
+    {
+      "name": "hymns/215.txt",
+      "timestamp": 1746509588
+    },
+    {
+      "name": "hymns/52.txt",
+      "timestamp": 1746509588
+    },
+    {
+      "name": "hymns/7.txt",
+      "timestamp": 1746509588
+    },
+    {
+      "name": "hymns/28.txt",
+      "timestamp": 1754586835
+    },
+    {
+      "name": "hymns/53.txt",
+      "timestamp": 1754684990
+    },
+    {
+      "name": "hymns/208.txt",
+      "timestamp": 1757298852
+    },
+    {
+      "name": "hymns/10.txt",
+      "timestamp": 1757638029
+    },
+    {
+      "name": "hymns/9.txt",
+      "timestamp": 1757638121
+    },
+    {
+      "name": "hymns/101.txt",
+      "timestamp": 1757918867
+    },
+    {
+      "name": "hymns/103.txt",
+      "timestamp": 1757918868
+    },
+    {
+      "name": "hymns/107.txt",
+      "timestamp": 1757918869
+    },
+    {
+      "name": "hymns/111.txt",
+      "timestamp": 1757918870
+    },
+    {
+      "name": "hymns/114.txt",
+      "timestamp": 1757918871
+    },
+    {
+      "name": "hymns/117.txt",
+      "timestamp": 1757918872
+    },
+    {
+      "name": "hymns/119.txt",
+      "timestamp": 1757918873
+    },
+    {
+      "name": "hymns/120.txt",
+      "timestamp": 1757918874
+    },
+    {
+      "name": "hymns/123.txt",
+      "timestamp": 1757918875
+    },
+    {
+      "name": "hymns/125.txt",
+      "timestamp": 1757918876
+    },
+    {
+      "name": "hymns/126.txt",
+      "timestamp": 1757918877
+    },
+    {
+      "name": "hymns/127.txt",
+      "timestamp": 1757918878
+    },
+    {
+      "name": "hymns/128.txt",
+      "timestamp": 1757918879
+    },
+    {
+      "name": "hymns/13.txt",
+      "timestamp": 1757918880
+    },
+    {
+      "name": "hymns/130.txt",
+      "timestamp": 1757918881
+    },
+    {
+      "name": "hymns/133.txt",
+      "timestamp": 1757918882
+    },
+    {
+      "name": "hymns/134.txt",
+      "timestamp": 1757918883
+    },
+    {
+      "name": "hymns/14.txt",
+      "timestamp": 1757918884
+    },
+    {
+      "name": "hymns/16.txt",
+      "timestamp": 1757918885
+    },
+    {
+      "name": "hymns/20.txt",
+      "timestamp": 1757918886
+    },
+    {
+      "name": "hymns/30.txt",
+      "timestamp": 1757918887
+    },
+    {
+      "name": "hymns/32.txt",
+      "timestamp": 1757918888
+    },
+    {
+      "name": "hymns/34.txt",
+      "timestamp": 1757918889
+    },
+    {
+      "name": "hymns/36.txt",
+      "timestamp": 1757918890
+    },
+    {
+      "name": "hymns/37.txt",
+      "timestamp": 1757918891
+    },
+    {
+      "name": "hymns/41.txt",
+      "timestamp": 1757918892
+    },
+    {
+      "name": "hymns/43.txt",
+      "timestamp": 1757918893
+    },
+    {
+      "name": "hymns/50.txt",
+      "timestamp": 1757918894
+    },
+    {
+      "name": "hymns/51.txt",
+      "timestamp": 1757918895
+    },
+    {
+      "name": "hymns/61.txt",
+      "timestamp": 1757918896
+    },
+    {
+      "name": "hymns/65.txt",
+      "timestamp": 1757918897
+    },
+    {
+      "name": "hymns/72.txt",
+      "timestamp": 1757918898
+    },
+    {
+      "name": "hymns/77.txt",
+      "timestamp": 1757918899
+    },
+    {
+      "name": "hymns/78.txt",
+      "timestamp": 1757918900
+    },
+    {
+      "name": "hymns/85.txt",
+      "timestamp": 1757918901
+    },
+    {
+      "name": "hymns/94.txt",
+      "timestamp": 1757918902
+    }
+  ]
+}
