--- a/hymns/manifest.json
+++ b/hymns/manifest.json
@@ -183,6 +183,106 @@
     {
       "name": "hymns/94.txt",
       "timestamp": 1757918902
+    },
+    {
+      "name": "hymns/136.txt",
+      "timestamp": 1757987809
+    },
+    {
+      "name": "hymns/140.txt",
+      "timestamp": 1757987810
+    },
+    {
+      "name": "hymns/142.txt",
+      "timestamp": 1757987811
+    },
+    {
+      "name": "hymns/143.txt",
+      "timestamp": 1757987812
+    },
+    {
+      "name": "hymns/144.txt",
+      "timestamp": 1757987813
+    },
+    {
+      "name": "hymns/146.txt",
+      "timestamp": 1757987814
+    },
+    {
+      "name": "hymns/148.txt",
+      "timestamp": 1757987815
+    },
+    {
+      "name": "hymns/150.txt",
+      "timestamp": 1757987816
+    },
+    {
+      "name": "hymns/151.txt",
+      "timestamp": 1757987817
+    },
+    {
+      "name": "hymns/152.txt",
+      "timestamp": 1757987818
+    },
+    {
+      "name": "hymns/153.txt",
+      "timestamp": 1757987819
+    },
+    {
+      "name": "hymns/157.txt",
+      "timestamp": 1757987820
+    },
+    {
+      "name": "hymns/161.txt",
+      "timestamp": 1757987821
+    },
+    {
+      "name": "hymns/162.txt",
+      "timestamp": 1757987822
+    },
+    {
+      "name": "hymns/163.txt",
+      "timestamp": 1757987823
+    },
+    {
+      "name": "hymns/166.txt",
+      "timestamp": 1757987824
+    },
+    {
+      "name": "hymns/168.txt",
+      "timestamp": 1757987825
+    },
+    {
+      "name": "hymns/171.txt",
+      "timestamp": 1757987826
+    },
+    {
+      "name": "hymns/178.txt",
+      "timestamp": 1757987827
+    },
+    {
+      "name": "hymns/182.txt",
+      "timestamp": 1757987828
+    },
+    {
+      "name": "hymns/184.txt",
+      "timestamp": 1757987829
+    },
+    {
+      "name": "hymns/185.txt",
+      "timestamp": 1757987830
+    },
+    {
+      "name": "hymns/188.txt",
+      "timestamp": 1757987831
+    },
+    {
+      "name": "hymns/189.txt",
+      "timestamp": 1757987832
+    },
+    {
+      "name": "hymns/191.txt",
+      "timestamp": 1757987833
     }
   ]
 }
