--- a/hymns/manifest.json
+++ b/hymns/manifest.json
@@ -375,6 +375,14 @@
     {
       "name": "hymns/9.txt",
       "timestamp": 1758073461
+    },
+    {
+      "name": "hymns/1.txt",
+      "timestamp": 1758225921
+    },
+    {
+      "name": "hymns/2.txt",
+      "timestamp": 1758225922
     }
   ]
 }
